--- a/styles/AnimatedTextGrid.module.scss
+++ b/styles/AnimatedTextGrid.module.scss
@@ -3,7 +3,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
   background-color: black;
+  z-index: 1; // Ensure the animation is above other content
 
   // Style for each character container
   .character {
