--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,9 +1,5 @@
 body {
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   margin: 0;
-  overflow: hidden;
+  padding: 0;
+  background-color: #000;
 }
